--- a/style.css
+++ b/style.css
@@ -4,4 +4,10 @@
   
 body {
   background-color: #2c3e50;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  overflow: hidden;
+  margin: 0;
 }  
