--- a/style.css
+++ b/style.css
@@ -26,4 +26,7 @@ body {
   left: 0;
   width: 0;
   height: 0;
+  border: 50px solid transparent;
+  border-bottom-color: #fff;
+  animation: rotateA 2s linear infinite 0.5s;
 }
