--- a/style.css
+++ b/style.css
@@ -41,9 +41,13 @@ body {
   25% {
     transform: rotate(0deg);
   }
+  
   50%,
   75% {
     transform: rotate(180deg);
   }
-}
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
