--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body {
   25% {
     transform: rotate(0deg);
   }
-  
+
   50%,
   75% {
     transform: rotate(180deg);
@@ -50,4 +50,11 @@ body {
   100% {
     transform: rotate(360deg);
   }
+}
+
+@keyframes rotateB {
+  0%,
+  25% {
+    transform: rotate(90deg);
+  }  
 }
