--- a/style.css
+++ b/style.css
@@ -3,7 +3,11 @@
 }
   
 body {
-    font-family: 'Muli', sans-serif;
-    display: flex;
-    align-items: center;
+  font-family: 'Muli', sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  overflow: hidden;
+  margin: 0;
 }
