--- a/style.css
+++ b/style.css
@@ -16,3 +16,9 @@ body {
   display: flex;
   width: 90vw;
 }
+
+.panel {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
