--- a/style.css
+++ b/style.css
@@ -25,4 +25,8 @@ body {
   border-radius: 50px;
   color: #fff;
   cursor: pointer;
+  flex: 0.5;
+  margin: 10px;
+  position: relative;
+  -webkit-transition: all 700ms ease-in;
 }
