--- a/style.css
+++ b/style.css
@@ -48,3 +48,9 @@ body {
   opacity: 1;
   transition: opacity 0.3s ease-in 0.4s;
 }
+
+@media (max-width: 480px) {
+  .container {
+    width: 100vw;
+  }
+}
