--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ body {
   background-color: #1f1f1f;
   font-family: 'Muli', sans-serif;
   display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 
 .container {
