--- a/style.css
+++ b/style.css
@@ -42,6 +42,8 @@ body {
 .progress {
   background-color: var(--line-border-fill);
   position: absolute;
+  top: 50%;
+  left: 0;
 }    
 
 .panel {
