--- a/style.css
+++ b/style.css
@@ -55,6 +55,9 @@ circle {
   background-color: #1f1f1f;
   color:#e2e2e2;
   border-radius: 50%;
+  height: 30px;
+  width: 30px;
+  display: flex;
 }
 
 .panel {
