--- a/style.css
+++ b/style.css
@@ -58,6 +58,10 @@ circle {
   height: 30px;
   width: 30px;
   display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 3px solid var(--line-border-empty);
+  transition: 0.4s ease;
 }
 
 .panel {
