--- a/style.css
+++ b/style.css
@@ -64,6 +64,15 @@ circle {
   transition: 0.4s ease;
 }
 
+.circle.active {
+    border-color: var(--line-border-fill);
+  }
+  
+  .btn {
+    background-color: var(--line-border-fill);
+    color: #fff;
+  }
+
 .panel {
   background-size: cover;
   background-position: center;
