--- a/style.css
+++ b/style.css
@@ -71,6 +71,9 @@ circle {
   .btn {
     background-color: var(--line-border-fill);
     color: #fff;
+    border: 0;
+    border-radius: 6px;
+    cursor: pointer;
   }
 
 .panel {
