--- a/style.css
+++ b/style.css
@@ -74,6 +74,10 @@ circle {
     border: 0;
     border-radius: 6px;
     cursor: pointer;
+    font-family: inherit;
+    padding: 8px 30px;
+    margin: 5px;
+    font-size: 14px;
   }
 
 .panel {
