--- a/style.css
+++ b/style.css
@@ -72,12 +72,12 @@ circle {
     background-color: var(--line-border-fill);
     color: #fff;
     border: 0;
-    border-radius: 6px;
+    border-radius: 5px;
     cursor: pointer;
     font-family: inherit;
-    padding: 8px 30px;
-    margin: 5px;
-    font-size: 14px;
+    padding: 7px 20px;
+    margin: 7px;
+    font-size: 1opx;
   }
 
 .panel {
