--- a/style.css
+++ b/style.css
@@ -3,13 +3,10 @@
 }
   
 body {
-  background-color: #1f1f1f;
-  font-family: 'Muli', sans-serif;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  overflow: hidden;
+  font-family: 'Lato', sans-serif;
+  background-color: #333;
+  color: #222;
+  overflow-x: hidden;
   margin: 0;
 }
 
