--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ body {
 .container {
   background-color: #fafafa;
   transform-origin: top left;
+  transition: transform 0.5s linear;
+  width: 100vw;
 }
 
 .progress-container {
