--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ body {
   transform-origin: top left;
   transition: transform 0.5s linear;
   width: 100vw;
+  min-height: 100vh;
+  padding: 50px;
 }
 
 .progress-container {
