--- a/style.css
+++ b/style.css
@@ -24,6 +24,12 @@ body {
     transform: rotate(-20deg);
   }
 
+  .circle-container {
+    position: fixed;
+    top: -100px;
+    left: -100px;
+  }
+
 .progress-container {
   display: flex;
   justify-content: space-between;
