--- a/style.css
+++ b/style.css
@@ -30,6 +30,15 @@ body {
     left: -100px;
   }
 
+  .circle {
+    background-color: #ff7979;
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    position: relative;
+    transition: transform 0.5s linear;
+  }
+
 .progress-container {
   display: flex;
   justify-content: space-between;
