--- a/style.css
+++ b/style.css
@@ -173,3 +173,7 @@ circle {
     background-color: var(--line-border-empty);
     cursor: not-allowed;
   }
+
+  .circle button:focus {
+    outline: none;
+  }
