--- a/style.css
+++ b/style.css
@@ -181,3 +181,9 @@ circle {
   .circle button#open {
     left: 60%;
   }
+
+  .circle button#close {
+    top: 60%;
+    transform: rotate(90deg);
+    transform-origin: top left;
+  }
