--- a/style.css
+++ b/style.css
@@ -1,189 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 * {
   box-sizing: border-box;
 }
-  
-body {
-  font-family: 'Lato', sans-serif;
-  background-color: #333;
-  color: #222;
-  overflow-x: hidden;
-  margin: 0;
-}
-
-.container {
-  background-color: #fafafa;
-  transform-origin: top left;
-  transition: transform 0.5s linear;
-  width: 100vw;
-  min-height: 100vh;
-  padding: 50px;
-}
-
-
-.container.show-nav {
-    transform: rotate(-20deg);
-  }
-
-  .circle-container {
-    position: fixed;
-    top: -100px;
-    left: -100px;
-  }
-
-  .circle {
-    background-color: #ff7979;
-    height: 200px;
-    width: 200px;
-    border-radius: 50%;
-    position: relative;
-    transition: transform 0.5s linear;
-  }
-
-  .circle button {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-  height: 100px;
-  background: transparent;
-  border: 0;
-  font-size: 26px;
-  color: #fff;
-  }
-
-  .container.show-nav .circle {
-    transform: rotate(-70deg);
-  }
-
-.progress-container {
-  display: flex;
-  justify-content: space-between;
-  position: relative;
-  margin-bottom: 30px;
-  max-width: 100%;
-  width: 350px;
-}
-
-.progress-container::before {
-  content: '';
-  background-color: var(--line-border-empty);
-  position: absolute;
-  top: 50%;
-  left: 0;
-  transform: translateY(-50%);
-  height: 4px;
-  width: 100%;
-  z-index: -1;
-}
-
-.progress {
-  background-color: var(--line-border-fill);
-  position: absolute;
-  top: 50%;
-  left: 0;
-  transform: translateY(-50%);
-  height: 4px;
-  width: 0%;
-  z-index: -1;
-  transition: 0.4s ease;
-}    
-
-circle {
-  background-color: #1f1f1f;
-  color:#e2e2e2;
-  border-radius: 50%;
-  height: 30px;
-  width: 30px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 2px solid var(--line-border-empty);
-  transition: 0.4s ease;
-}
-
-.circle.active {
-    border-color: var(--line-border-fill);
-  }
-  
-  .btn {
-    background-color: var(--line-border-fill);
-    color: #fff;
-    border: 0;
-    border-radius: 4px;
-    cursor: pointer;
-    font-family: inherit;
-    padding: 6px 20px;
-    margin: 6px;
-    font-size: 10px;
-  }
-
-.panel {
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  height: 80vh;
-  border-radius: 50px;
-  color: #fff;
-  cursor: pointer;
-  flex: 0.5;
-  margin: 10px;
-  position: relative;
-  -webkit-transition: all 700ms ease-in;
-}
-
-.panel h3 {
-  font-size: 24px;
-  position: absolute;
-  bottom: 20px;
-  left: 20px;
-  margin: 0;
-  opacity: 0;
-}
-
-.panel.active {
-  flex: 10;
-}
-
-.panel.active h3 {
-  opacity: 2;
-  transition: opacity 0.3s ease-in 0.4s;
-}
-
-@media (max-width: 480px) {
-  .container {
-    width: 95vw;
-  }
-
-  .panel:nth-of-type(3),
-    .panel:nth-of-type(4) {
-      display: none;
-  }
-}
-
-.btn:disabled {
-    background-color: var(--line-border-empty);
-    cursor: not-allowed;
-  }
-
-  .btn:focus {
-    outline: 0;
-  }
-
-  .btn:disabled {
-    background-color: var(--line-border-empty);
-    cursor: not-allowed;
-  }
-
-  .circle button:focus {
-    outline: none;
-  }
-
-  .circle button#open {
-    left: 50%;
-  }
-
-  .circle button#close {
-    top: 60%;
-    transform: rotate(85deg);
-    transform-origin: top left;
-  }
