--- a/style.css
+++ b/style.css
@@ -34,4 +34,8 @@ body {
   background-color: #fff;
   border: 0;
   cursor: pointer;
+  font-size: 24px;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
