--- a/style.css
+++ b/style.css
@@ -7,7 +7,9 @@
 body {
         background-color: #efedd6;
         font-family: 'Roboto', sans-serif;
-    
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         overflow-x: hidden;
       }
 
