--- a/style.css
+++ b/style.css
@@ -15,6 +15,15 @@ body {
   overflow-x: hidden;
 }
 
+h1 {
+    margin: 10px;
+  }
+  
+  .box {
+    background-color: steelblue;
+    color: #fff;
+  }
+
 .search {
   position: relative;
   height: 50px;
