--- a/style.css
+++ b/style.css
@@ -1,87 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
-* {
-  box-sizing: border-box;
-}
-
-body {
-  background-color: #efedd6;
-  font-family: 'Roboto', sans-serif;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin: 0;
-  overflow-x: hidden;
-}
-
-h1 {
-    margin: 10px;
-  }
-  
-  .box {
-  background-color: steelblue;
-  color: #fff;
-  align-items: center;
-  justify-content: center;
-  width: 400px;
-  height: 200px;
-  margin: 10px;
-  border-radius: 10px;
-  box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.3);
-  transform: translateX(400%);
-  transition: transform 0.4s ease;
-}
-
-.search {
-  position: relative;
-  height: 50px;
-}
-
-.search .input {
-  background-color: #fff;
-  border: 0;
-  font-size: 18px;
-  padding: 15px;
-  height: 50px;
-  width: 50px;
-  transition: width 0.3s ease
-}
-
-.btn {
-  background-color: #fff;
-  border: 0;
-  cursor: pointer;
-  font-size: 24px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 50px;
-  width: 50px;
-  transition: transform 0.3s ease;
-}
-
-.btn:focus,
-.input:focus {
-  outline: none;
-}
-
-.search.active .input {
-  width: 200px;
-}
-
-.search.active .btn {
-  transform: translateX(198px);
-}
-
-.box:nth-of-type(even) {
-  transform: translateX(-400%);
-}
-
-.box.show {
-  transform: translateX(0);
-}
-
-.box h2 {
-  font-size: 45px;
+:root {
+  --left-bg-color: rgba(87, 84, 236, 0.7);
+  --right-bg-color: rgba(43, 43, 43, 0.8);
 }
