--- a/style.css
+++ b/style.css
@@ -13,3 +13,11 @@
 * {
   box-sizing: border-box;
 }
+
+
+body {
+    font-family: 'Roboto', sans-serif;
+    height: 100vh;
+    overflow: hidden;
+    margin: 0;
+  }
