--- a/style.css
+++ b/style.css
@@ -16,8 +16,14 @@
 
 
 body {
-    font-family: 'Roboto', sans-serif;
-    height: 100vh;
-    overflow: hidden;
-    margin: 0;
-  }
+  font-family: 'Roboto', sans-serif;
+  height: 100vh;
+  overflow: hidden;
+  margin: 0;
+}
+
+h1 {
+  font-size: 4rem;
+  color: #fff;
+  position: absolute;
+}
