--- a/style.css
+++ b/style.css
@@ -25,5 +25,14 @@ body {
 h1 {
   font-size: 4rem;
   color: #fff;
+  position: absolute;left: 50%;
+  top: 20%;
+  transform: translateX(-50%);
+  white-space: nowrap;
+}
+
+.btn {
   position: absolute;
+  display: flex;
+  align-items: center;
 }
