--- a/style.css
+++ b/style.css
@@ -34,5 +34,7 @@ h1 {
 .btn {
   position: absolute;
   display: flex;
-  align-items: center;
+  align-items: center;justify-content: center;
+  left: 50%;
+  top: 40%;
 }
