--- a/style.css
+++ b/style.css
@@ -41,4 +41,7 @@ h1 {
   text-decoration: none;
   color: #fff;
   border: #fff solid 0.2rem;
+  font-size: 1rem;
+  font-weight: bold;
+  text-transform: uppercase;
 }
