--- a/style.css
+++ b/style.css
@@ -57,3 +57,8 @@ h1 {
     background-color: var(--right-btn-hover-color);
     border-color: var(--right-btn-hover-color);
   }
+
+  plit.right .btn:hover {
+    background-color: var(--right-btn-hover-color);
+    border-color: var(--right-btn-hover-color);
+  }
