--- a/style.css
+++ b/style.css
@@ -58,7 +58,14 @@ h1 {
     border-color: var(--right-btn-hover-color);
   }
 
-  plit.right .btn:hover {
+ split.right .btn:hover {
     background-color: var(--right-btn-hover-color);
     border-color: var(--right-btn-hover-color);
+  }
+
+  .split {
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    overflow: hidden;
   }
