--- a/style.css
+++ b/style.css
@@ -76,3 +76,11 @@ h1 {
     background-repeat: no-repeat;
     background-size: cover;
   }
+
+  .split.left::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: var(--left-bg-color);
+  }
