--- a/style.css
+++ b/style.css
@@ -1,93 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-
-:root {
-  --left-bg-color: rgba(87, 84, 236, 0.7);
-  --right-bg-color: rgba(43, 43, 43, 0.8);
-  --left-btn-hover-color: rgba(87, 84, 236, 1);
-  --right-btn-hover-color: rgba(28, 122, 28, 1);
-  --hover-width: 60%;
-  --other-width: 40%;
-  --speed: 1000ms;
-}
+@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
 
 * {
   box-sizing: border-box;
 }
-
-
-body {
-  font-family: 'Roboto', sans-serif;
-  height: 90vh;
-  overflow: hidden;
-  margin: 0;
-}
-
-h1 {
-  font-size: 3rem;
-  color: #fff;
-  position: absolute;left: 45%;
-  top: 25%;
-  transform: translateX(-50%);
-  white-space: nowrap;
-}
-
-.btn {
-  position: absolute;
-  display: flex;
-  align-items: center;
-  left: 45%;
-  top: 35%;
-  transform: translateX(-50%);
-  text-decoration: none;
-  color: #fff;
-  border: #fff solid 0.4rem;
-  font-size: 1rem;
-  font-weight: bold;
-  text-transform: uppercase;
-  width: 145rem;
-  padding: 2.0rem;
-}
-
-.split.left .btn:hover {
-  background-color: var(--left-btn-hover-color);
-  border-color: var(--left-btn-hover-color);
-}
-
-.split.right .btn:hover {
-    background-color: var(--right-btn-hover-color);
-    border-color: var(--right-btn-hover-color);
-  }
-
- split.right .btn:hover {
-    background-color: var(--right-btn-hover-color);
-    border-color: var(--right-btn-hover-color);
-  }
-
-  .split {
-    position: absolute;
-    width: 50%;
-    height: 85%;
-    overflow: hidden;
-  }
-
-  .split.left {
-    left: 0;
-    background: url('ps.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-
-  .split.left::before {
-    content: '';
-    position: absolute;
-    width: 90%;
-    height: 95%;
-    background-color: var(--left-bg-color);
-  }
-
-  .split.right {
-    right: 0;
-    background: url('xbox.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
