--- a/style.css
+++ b/style.css
@@ -3,3 +3,11 @@
 * {
   box-sizing: border-box;
 }
+
+body {
+  background-color: steelblue;
+  color: #fff;
+  font-family: 'Muli', sans-serif;
+  display: flex;
+  flex-direction: column;
+}
